Add nullability annotations
Add jspecify nullability annotations and clean up a bunch of code.